--- a/authors.yml
+++ b/authors.yml
@@ -1,4 +1,4 @@
-Leigh Stewardson:
+Claudie Larouche:
   name        : "Claudie Larouche"
   bio         : "Let's talk about code! Reach out via the links below."
   avatar      : "https://placehold.co/400"
